unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/PotentielVehiculesFrigorifiques__c.object-meta.xml
<CustomObject>
    <label>Potentiel Véhicules Frigorifiques</label>
    <nameField>
        <displayFormat>GF-PVF-{0000000000}</displayFormat>
        <label>Identifiant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potentiel Véhicules Frigorifiques</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>