unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/fields/CategorieProduit__c.field-meta.xml
<CustomField>
    <fullName>CategorieProduit__c</fullName>
    <label>Catégorie Produit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
            </value>
            <value>
                <fullName>P6</fullName>
            </value>
            <value>
                <fullName>P8</fullName>
            </value>
            <value>
                <fullName>P10</fullName>
            </value>
            <value>
                <fullName>P15</fullName>
            </value>
            <value>
                <fullName>P16</fullName>
            </value>
            <value>
                <fullName>P18</fullName>
            </value>
            <value>
                <fullName>P21</fullName>
            </value>
            <value>
                <fullName>P23</fullName>
            </value>
            <value>
                <fullName>R4</fullName>
            </value>
            <value>
                <fullName>R9</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>V1</fullName>
            </value>
            <value>
                <fullName>V3</fullName>
            </value>
            <value>
                <fullName>V5</fullName>
            </value>
            <value>
                <fullName>V9</fullName>
            </value>
            <value>
                <fullName>V11</fullName>
            </value>
            <value>
                <fullName>V15</fullName>
            </value>
            <value>
                <fullName>V20</fullName>
            </value>
            <value>
                <fullName>------US------</fullName>
            </value>
            <value>
                <fullName>V8</fullName>
            </value>
            <value>
                <fullName>V10</fullName>
            </value>
            <value>
                <fullName>V12</fullName>
            </value>
            <value>
                <fullName>L12</fullName>
            </value>
            <value>
                <fullName>L14</fullName>
            </value>
            <value>
                <fullName>L16</fullName>
            </value>
            <value>
                <fullName>L18</fullName>
            </value>
            <value>
                <fullName>L20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>