unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/fields/Classement__c.field-meta.xml
<CustomField>
    <fullName>Classement__c</fullName>
    <inlineHelpText>Fréquence d&#39;utilisation du produit / Product utilization frequency</inlineHelpText>
    <label>Classement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>