unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/fields/CodePF__c.field-meta.xml
<CustomField>
    <fullName>CodePF__c</fullName>
    <label>Code PF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>