unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/fields/CompteRaisonSociale__c.field-meta.xml
<CustomField>
    <fullName>CompteRaisonSociale__c</fullName>
    <label>Compte (Raison Sociale)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Potentiel Véhicules Frigorifiques</relationshipLabel>
    <relationshipName>PotentielVehiculesFrigo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>