unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/fields/DateEcheance__c.field-meta.xml
<CustomField>
    <fullName>DateEcheance__c</fullName>
    <label>Date d&#39;échéance</label>
    <type>Date</type>
</CustomField>