unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/fields/MarqueCarrosserie__c.field-meta.xml
<CustomField>
    <fullName>MarqueCarrosserie__c</fullName>
    <label>Marque Carrosserie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC. Plast Robbiese</fullName>
            </value>
            <value>
                <fullName>Aubineau</fullName>
            </value>
            <value>
                <fullName>Cazaux</fullName>
            </value>
            <value>
                <fullName>Chereau</fullName>
            </value>
            <value>
                <fullName>Cold Car</fullName>
            </value>
            <value>
                <fullName>Cold consortium</fullName>
            </value>
            <value>
                <fullName>Continental</fullName>
            </value>
            <value>
                <fullName>Coolertech</fullName>
            </value>
            <value>
                <fullName>Coolfreeze</fullName>
            </value>
            <value>
                <fullName>Cooline</fullName>
            </value>
            <value>
                <fullName>COOLING VANS</fullName>
            </value>
            <value>
                <fullName>Coolkit</fullName>
            </value>
            <value>
                <fullName>Corsin</fullName>
            </value>
            <value>
                <fullName>ECP</fullName>
            </value>
            <value>
                <fullName>Framec Trade</fullName>
            </value>
            <value>
                <fullName>Frappa</fullName>
            </value>
            <value>
                <fullName>Great Dane</fullName>
            </value>
            <value>
                <fullName>Grey and Adams</fullName>
            </value>
            <value>
                <fullName>Gruau</fullName>
            </value>
            <value>
                <fullName>GVS</fullName>
            </value>
            <value>
                <fullName>Hackney</fullName>
            </value>
            <value>
                <fullName>Honorio</fullName>
            </value>
            <value>
                <fullName>Ice Cold</fullName>
            </value>
            <value>
                <fullName>Iglocar</fullName>
            </value>
            <value>
                <fullName>Iroquois</fullName>
            </value>
            <value>
                <fullName>JDK</fullName>
            </value>
            <value>
                <fullName>Johnson</fullName>
            </value>
            <value>
                <fullName>Kiddron</fullName>
            </value>
            <value>
                <fullName>Kiesling Fahrzeugbau</fullName>
            </value>
            <value>
                <fullName>Klégé-Europ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>