unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/fields/MarqueGroupe__c.field-meta.xml
<CustomField>
    <fullName>MarqueGroupe__c</fullName>
    <label>Marque Groupe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alex Original</fullName>
            </value>
            <value>
                <fullName>Carrier Transicold</fullName>
            </value>
            <value>
                <fullName>EDT</fullName>
            </value>
            <value>
                <fullName>Eurofrigo</fullName>
            </value>
            <value>
                <fullName>Frigoblock</fullName>
            </value>
            <value>
                <fullName>GAH</fullName>
            </value>
            <value>
                <fullName>Hubbard</fullName>
            </value>
            <value>
                <fullName>Relec</fullName>
            </value>
            <value>
                <fullName>Thermoking</fullName>
            </value>
            <value>
                <fullName>Webasto</fullName>
            </value>
            <value>
                <fullName>ZANOTTI</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>