unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/fields/SousCategorieProduit__c.field-meta.xml
<CustomField>
    <fullName>SousCategorieProduit__c</fullName>
    <label>Sous-catégorie Produit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CategorieProduit__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>C22I</fullName>
            </value>
            <value>
                <fullName>C22IL</fullName>
            </value>
            <value>
                <fullName>C22M</fullName>
            </value>
            <value>
                <fullName>C22ML</fullName>
            </value>
            <value>
                <fullName>C22X</fullName>
            </value>
            <value>
                <fullName>C22XL</fullName>
            </value>
            <value>
                <fullName>C24I</fullName>
            </value>
            <value>
                <fullName>C24IL</fullName>
            </value>
            <value>
                <fullName>C24M</fullName>
            </value>
            <value>
                <fullName>C24ML</fullName>
            </value>
            <value>
                <fullName>C24X</fullName>
            </value>
            <value>
                <fullName>C24XL</fullName>
            </value>
            <value>
                <fullName>C26I</fullName>
            </value>
            <value>
                <fullName>C26IL</fullName>
            </value>
            <value>
                <fullName>C26M</fullName>
            </value>
            <value>
                <fullName>C26ML</fullName>
            </value>
            <value>
                <fullName>C26X</fullName>
            </value>
            <value>
                <fullName>C26XL</fullName>
            </value>
            <value>
                <fullName>C28I</fullName>
            </value>
            <value>
                <fullName>C28IL</fullName>
            </value>
            <value>
                <fullName>C28M</fullName>
            </value>
            <value>
                <fullName>C28ML</fullName>
            </value>
            <value>
                <fullName>C28X</fullName>
            </value>
            <value>
                <fullName>C28XL</fullName>
            </value>
            <value>
                <fullName>C29I</fullName>
            </value>
            <value>
                <fullName>C29IL</fullName>
            </value>
            <value>
                <fullName>C29M</fullName>
            </value>
            <value>
                <fullName>C29ML</fullName>
            </value>
            <value>
                <fullName>C29X</fullName>
            </value>
            <value>
                <fullName>C29XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>