unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DateEcheance__c</columns>
    <columns>Notified__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>