unpackaged/main/default/objects/PotentielVehiculesFrigorifiques__c/listViews/Potentiel_v_hicules_vehicles_potential.listView-meta.xml
<ListView>
    <fullName>Potentiel_v_hicules_vehicles_potential</fullName>
    <columns>Prestataire__c</columns>
    <columns>CompteRaisonSociale__c</columns>
    <columns>DateEcheance__c</columns>
    <columns>Quantite__c</columns>
    <columns>CodePF__c</columns>
    <columns>SousCategorieProduit__c</columns>
    <columns>TypeSourcing__c</columns>
    <columns>MarqueChassis__c</columns>
    <columns>MarqueCarrosserie__c</columns>
    <columns>MarqueGroupe__c</columns>
    <filterScope>Everything</filterScope>
    <label>Potentiel véhicules / vehicles potential</label>
    <language>en_GB</language>
</ListView>